Adding Today Task

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -68,16 +68,17 @@
 	
 	<div class="container">
 		<div class="row centered mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
+			<div class="col-lg-10 col-lg-offset-1">
                 <h2>DASHBOARD</h2>
                 <p>This is a real time task dashboard build in JS using Trello API. All my task or on my trello board. I am using Getting things done methode.</p>
                 <div class="row">
                     <div class="col-md-4">
-                        <h3> Voici les projets que je travail avec leur importance</h3><br>
-                        <p id="categorieTaskList"></p>
+                        <h4>Number of task by projet</h4><br>
+                        <p id="categorieTaskList" class="text-left"></p>
                     </div>
                     <div class="col-md-4">
-
+                        <h4> This is today done task</h4><br>
+                        <p id="todayTask" class="text-left"></p>
                     </div>
                     <div class="col-md-4">
 
