--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
-					<a href="https://twitter.com/justin2997"><i class="fa fa-twitter"></i></a>
+					<a href="https://medium.com/@justin.brlotte797"><i class="fa fa-medium"></i></a>
 					<a href="https://www.linkedin.com/in/justinbrulotte?trk=hp-identity-name"><i class="fa fa-linkedin"></i></a>
           <a href="https://github.com/Justin2997"><i class="fa fa-github"></i></a>
 			</div><!-- /row -->
