--- a/club_magog.html
+++ b/club_magog.html
@@ -102,10 +102,10 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="">
-					<a href="https://twitter.com/justin2997"><i class="fa fa-twitter"></i></a>
+					<a href="https://medium.com/@justin.brlotte797"><i class="fa fa-medium"></i></a>
 					<a href="https://www.linkedin.com/in/justinbrulotte?trk=hp-identity-name"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://github.com/Justin2997"><i class="fa fa-github"></i></a>
-                </div>
+          <a href="https://github.com/Justin2997"><i class="fa fa-github"></i></a>
+          </div>
 			</div><! --/row -->
 		</div><! --/container -->
 	</div><! --/social -->
