--- a/work.html
+++ b/work.html
@@ -91,7 +91,7 @@ Vous ne connaissez pas la ville? Cliquez sur le bouton autour de moi et l'applic
 		<div class="container">
 			<div class="row centered">
 				<div class="">
-					<a href="https://twitter.com/justin2997"><i class="fa fa-twitter"></i></a>
+					<a href="https://medium.com/@justin.brlotte797"><i class="fa fa-medium"></i></a>
 					<a href="https://www.linkedin.com/in/justinbrulotte?trk=hp-identity-name"><i class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/Justin2997"><i class="fa fa-github"></i></a>
                 </div>
