Adding Dashboard link

--- a/service.html
+++ b/service.html
@@ -57,6 +57,7 @@
             <li><a href="about.html">À propos de moi</a></li>
             <li><a href="index.html#works">Mon portfolio</a></li>
             <li class="active"><a href="service.html">Mes services</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="http://www.justinbrulotte.com/blog/">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
