--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About me</a></li>
             <li><a href="#works">Porfolio</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="http://www.justinbrulotte.com/blog/">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
