--- a/work.html
+++ b/work.html
@@ -48,6 +48,7 @@
             <li><a href="about.html">À propos de moi</a></li>
             <li><a href="#works">Mon portfolio</a></li>
             <li><a href="service.html">Mes services</a></li>
+            <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="http://www.justinbrulotte.com/blog/">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
