--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Justin Brûlotte - Créateur de site web</title>
+    <title>Justin Brûlotte</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -46,7 +46,6 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About me</a></li>
             <li><a href="#works">Porfolio</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -59,7 +58,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h1 sytle="font-size:52px">JUSTIN BRÛLOTTE</h1>
-					<h4>DEVELOPPER, ENTREPRENER, LIFEHACKER AND SWIMMING ATHLETE</h4>
+					<h4>DEVELOPPER, ENTREPRENER, BLOCKCHAIN ENTHOUSIASME AND ATHLETE</h4>
 				</div>
 			</div>
 	    </div>
@@ -73,17 +72,25 @@
         <h5>Global Game Jame 2019</h5>
 				<a href="gamejam2019.html"><img src="image/unity.png" class="img-responsive"></a>
       </div>-->
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <h5>Cryptosys</h5>
+        <a href="https://www.usherbrooke.ca/genie/accueil/nouvelles/nouvelles-details/article/42749/"><img src="image/cryptosys.png" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <h5>Need a cart</h5>
+        <a href="https://tools.torontoauto.group/"><img src="image/car-dealer.jpeg" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <h5>Evenix</h5>
+        <a href="https://evenix.ca"><img src="image/evenix.png" class="img-responsive"></a>
+      </div>
 		  <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Montreal Quiz game build in PHP and Swift</h5>
         <a href="vivre375.html"><img src="image/folio_vive375.png" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <h5>Trainning e-commerce build in Wordpress</h5>
-          <a href="https://urbanwellnessclinic.com/"><img src="image/logo_urban.png" class="img-responsive"></a>
-        </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-          <h5>QC Pain association web site build in Wordpress</h5>
-          <a href="https://qnjpi-rqecd.ca/"><img src="image/qnjpi.png" class="img-responsive"></a>
+        <h5>Trainning e-commerce build in Wordpress</h5>
+        <a href="https://urbanwellnessclinic.com/"><img src="image/logo_urban.png" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Custom estimate Excel Sheet build in VBA</h5>
@@ -109,24 +116,12 @@
         <h5>Parking app for Sherbrooke city build in Swift</h5>
 				<a href="monparking.html"><img src="image/logo_monparking.png" class="img-responsive"></a>
       </div>
-
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <h5>QC Pain association web site build in Wordpress</h5>
+        <a href="https://qnjpi-rqecd.ca/"><img src="image/qnjpi.png" class="img-responsive"></a>
+      </div>
 		</div>
 	</div>
-
-			<div class="container">
-		<div class="row centered mb">
-			<h1>My organisations</h1>
-		 <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="vamudes.html"><img src="image/logo_vamudes.png" class="img-responsive"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="udesfirst.html"><img src="image/logo_udesfirst.png" class="img-responsive"></a>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href="enactus.html"><img src="image/logo_enactus.png" class="img-responsive"></a>
-      </div>
-      </div>
-      </div>
 	
 	<div id="social">
 		<div class="container">
