Update Dashboard Menu
Signed-off-by: Justin Brûlotte <justin.brlotte797@gmail.com>

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#works">Porfolio</a></li>
+            <li><a href="https://dashboard.justinbrulotte.com">Dashboard</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
