--- a/gamejam2019.html
+++ b/gamejam2019.html
@@ -63,11 +63,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="about.html">À propos de moi</a></li>
             <li><a href="#works">Mon portfolio</a></li>
-            <li><a href="service.html">Mes services</a></li>
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="http://www.justinbrulotte.com/blog/">Blog</a></li>
+            <li><a href="https://dashboard.justinbrulotte.com">Dashboard</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
