--- a/service.html
+++ b/service.html
@@ -54,11 +54,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="about.html">À propos de moi</a></li>
             <li><a href="index.html#works">Mon portfolio</a></li>
-            <li class="active"><a href="service.html">Mes services</a></li>
-            <li><a href="dashboard.html">Dashboard</a></li>
-            <li><a href="http://www.justinbrulotte.com/blog/">Blog</a></li>
+            <li><a href="https://dashboard.justinbrulotte.com">Dashboard</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
