Adding My NFT collection
Signed-off-by: Justin Brûlotte <justin.brlotte797@gmail.com>

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 	<div class="container">
 		<div class="row centered mt mb">
       <h1>My Porfolio</h1>
-      <!---<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <h5>Global Game Jame 2019</h5>
-				<a href="gamejam2019.html"><img src="image/unity.png" class="img-responsive"></a>
-      </div>-->
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <h5>My NFT Collection</h5>
+        <a href="my-nft-connection.html"><img src="image/my-nft-collection.png" class="img-responsive"></a>
+      </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Cryptosys</h5>
         <a href="https://www.usherbrooke.ca/genie/accueil/nouvelles/nouvelles-details/article/42749/"><img src="image/cryptosys.png" class="img-responsive"></a>
