--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="My name is Justin Brûlotte, I’m in my graduate in Computer Engineering at the University of Sherbrooke. I consider myself as an entrepreneur and athlete (I arrived 18th in the last Canadian Lifeguard-swimming competition). I currently operate my own freelance web business and a startup, Evenix, in event tracking with NFC. Let chat !">
+    <meta name="author" content="Justin Brûlotte">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
     <title>Justin Brûlotte</title>
@@ -71,55 +71,55 @@
       <h1>My Porfolio</h1>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>My NFT Collection</h5>
-        <a href="my-nft-connection.html"><img src="image/my-nft-collection.png" class="img-responsive"></a>
+        <a href="my-nft-connection.html"><img src="image/my-nft-collection.png" alt="My NFT cllection" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Cryptosys</h5>
-        <a href="https://www.usherbrooke.ca/genie/accueil/nouvelles/nouvelles-details/article/42749/"><img src="image/cryptosys.png" class="img-responsive"></a>
+        <a href="https://www.usherbrooke.ca/genie/accueil/nouvelles/nouvelles-details/article/42749/"><img src="image/cryptosys.png" alt="Cryptosys" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Need a cart</h5>
-        <a href="https://tools.torontoauto.group/"><img src="image/car-dealer.jpeg" class="img-responsive"></a>
+        <a href="https://tools.torontoauto.group/"><img src="image/car-dealer.jpeg" alt="Car Dealer app" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Evenix</h5>
-        <a href="https://evenix.ca"><img src="image/evenix.png" class="img-responsive"></a>
+        <a href="https://evenix.ca"><img src="image/evenix.png" alt="Evenix app" class="img-responsive"></a>
       </div>
 		  <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Montreal Quiz game build in PHP and Swift</h5>
-        <a href="vivre375.html"><img src="image/folio_vive375.png" class="img-responsive"></a>
+        <a href="vivre375.html"><img src="image/folio_vive375.png" alt="Vive375 app" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Trainning e-commerce build in Wordpress</h5>
-        <a href="https://urbanwellnessclinic.com/"><img src="image/logo_urban.png" class="img-responsive"></a>
+        <a href="https://urbanwellnessclinic.com/"><img src="image/logo_urban.png" alt="UrbanWellnessClinic website" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Custom estimate Excel Sheet build in VBA</h5>
-        <a href="vitrerie.html"><img src="image/logo_vitrerie.png" class="img-responsive"></a>
+        <a href="vitrerie.html"><img src="image/logo_vitrerie.png" alt="Vitrerie Dufour" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Bresil Startup web site build in Wordpress</h5>
-        <a href="prosistema.html"><img src="image/folio_prosistema.png" class="img-responsive"></a>
+        <a href="prosistema.html"><img src="image/folio_prosistema.png" alt="Prosistema site web" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Canadien Memory championship desing</h5>
-        <a href="memory.html"><img src="image/folio_memory.png" class="img-responsive"></a>
+        <a href="memory.html"><img src="image/folio_memory.png" alt="Canadien Memory championship desing" class="img-responsive"></a>
       </div>
         <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <h5>AI travel map build from scratch in Swift</h5>
-        <a href="holocity.html"><img src="image/folio_holocity.png" class="img-responsive"></a>
+        <h5>AR travel map build from scratch in Swift</h5>
+        <a href="holocity.html"><img src="image/folio_holocity.png" alt="AR travel map build from scratch in Swift" class="img-responsive"></a>
       </div>
 		  <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Sport web site build in HTML/CSS and JavaScript</h5>
-        <a href="club_magog.html"><img src="image/club_magog.png" class="img-responsive"></a>
+        <a href="club_magog.html"><img src="image/club_magog.png" alt="Sport web site build in HTML/CSS and JavaScript" class="img-responsive"></a>
       </div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>Parking app for Sherbrooke city build in Swift</h5>
-				<a href="monparking.html"><img src="image/logo_monparking.png" class="img-responsive"></a>
+				<a href="monparking.html"><img src="image/logo_monparking.png" alt="Parking app for Sherbrooke city build in Swift" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <h5>QC Pain association web site build in Wordpress</h5>
-        <a href="https://qnjpi-rqecd.ca/"><img src="image/qnjpi.png" class="img-responsive"></a>
+        <a href="https://qnjpi-rqecd.ca/"><img src="image/qnjpi.png" alt="QC Pain association web site build in Wordpress" class="img-responsive"></a>
       </div>
 		</div>
 	</div>
