--- a/qnjpi.html
+++ b/qnjpi.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="My name is Justin Brûlotte, I’m in my graduate in Computer Engineering at the University of Sherbrooke. I consider myself as an entrepreneur and athlete (I arrived 18th in the last Canadian Lifeguard-swimming competition). I currently operate my own freelance web business and a startup, Evenix, in event tracking with NFC. Let chat !">
+    <meta name="author" content="Justin Brûlotte">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
     <title>Justin Brûlotte - Créateur de site web</title>
