Moving http to https
Signed-off-by: Justin Brûlotte <justin.brlotte797@gmail.com>

--- a/club_magog.html
+++ b/club_magog.html
@@ -82,8 +82,8 @@
       <div class="alert alert-danger">
         <strong>Attention</strong> Le Club de tennis et Multi-Forme Magog à été racheter. Leur site n'est plus en ligne. 
       </div>
-				<h4><a href="http://www.clubsportifmagog.com/
-">http://www.clubsportifmagog.com/</a></h4>
+				<h4><a href="https://www.clubsportifmagog.com/
+">https://www.clubsportifmagog.com/</a></h4>
         <br>
 				<p class="jutif">J'ai conçu le site web du Club de tennis et Multi-Forme Magog en collaboration avec <a href="https://www.facebook.com/ericklamontagne.dg/?pnref=story">Erick Lamontagne</a>, designer web. Il s’agit d’un site adaptatif, optimisé pour les moteurs de recherche et facile d’utilisation. De plus, j'ai créé des formulaires personnalisés permettant l'inscription de clients directement par courriel.</p>
 			</div>
