--- a/enactus.html
+++ b/enactus.html
@@ -80,10 +80,10 @@
     <div class="row centered mt mb">
       <div class="col-lg-8 col-lg-offset-2">
         <h4>MON IMPLICATION DANS ENACTUS</h4>
-        <h3><a href="http://enactus-sherbrooke.com/">http://enactus-sherbrooke.com</a></h3>
+        <h3><a href="https://enactus-sherbrooke.com/">https://enactus-sherbrooke.com</a></h3>
         <br>
         <p class="jutif">
-        Enactus est un groupe d'étudiant entrepreneur de l'université de Sherbooke qui travaille ensemble sur différents problèmes de la régions.Je suis développeur web pour l'application Feed the Exchange (<a href="http://feedtheexchange.ca/">http://feedtheexchange.ca/</a> ). Cette application favorise l'échange entre les jeunes du primaire et les personnes âgées.</p>
+        Enactus est un groupe d'étudiant entrepreneur de l'université de Sherbooke qui travaille ensemble sur différents problèmes de la régions.Je suis développeur web pour l'application Feed the Exchange (<a href="https://feedtheexchange.ca/">https://feedtheexchange.ca/</a> ). Cette application favorise l'échange entre les jeunes du primaire et les personnes âgées.</p>
         </div>
       <div class="col-lg-10 col-lg-offset-1 mt">
         <center><img class="img-responsive" src="image/enactus-1.jpg"></centre>
