--- a/holocity.html
+++ b/holocity.html
@@ -80,9 +80,9 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>HOLOCITY C'EST QUOI?</h4>
-        <h3><a href="http://holocity.andredaste.shost.ca/hacksherbrooke.html">http://www.holocity.com</a></h3>
+        <h3><a href="https://holocity.andredaste.shost.ca/hacksherbrooke.html">https://www.holocity.com</a></h3>
         <br>
-				<p class="jutif">Pour une deuxième année, mon équipe a conçu et soumis une application au concours <a href=" http://hacksherbrooke.com/">HackSherbrooke 2016</a>. Nous avons frappé très fort en développant une application de réalité virtuelle qui vous permet de naviguer dans une ville. Simplement pointé votre caméra sur un bâtiment et une petite bulle appètera et vous donnera des informations sur le bâtiment ou une activité. Plusieurs équipes ont tenté de faire une application de réalité virtuelle comme la nôtre, mais aucune n’ont réussi à relever le défi de programmation et de mathématique. Nous avons par ailleurs gagné le prix ZAP.</p>
+				<p class="jutif">Pour une deuxième année, mon équipe a conçu et soumis une application au concours <a href=" https://hacksherbrooke.com/">HackSherbrooke 2016</a>. Nous avons frappé très fort en développant une application de réalité virtuelle qui vous permet de naviguer dans une ville. Simplement pointé votre caméra sur un bâtiment et une petite bulle appètera et vous donnera des informations sur le bâtiment ou une activité. Plusieurs équipes ont tenté de faire une application de réalité virtuelle comme la nôtre, mais aucune n’ont réussi à relever le défi de programmation et de mathématique. Nous avons par ailleurs gagné le prix ZAP.</p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mt">
         <center><img class="img-responsive" src="image/desing_holocity.png"></centre>
