--- a/memory.html
+++ b/memory.html
@@ -80,7 +80,7 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>QUELLE EST MON IMPLICATION ?</h4>
-        <h3><a href="http://www.canadianmemorychampionships.ca">http://www.canadianmemorychampionships.ca</a></h3>
+        <h3><a href="https://www.canadianmemorychampionships.ca">https://www.canadianmemorychampionships.ca</a></h3>
         <br>
 				<p class="jutif">Après que j'ai participé au championnat de mémoire du Canada, je me suis impliqué dans l’événement. Le championnat de mémoire est l’opportunité aux athlètes de mémoire de confronter leur capacité de mémoriser des paquets de cartes, des noms, des mots aléatoires ou encore des nombres aléatoires.</p>
         </div>
