--- a/monparking.html
+++ b/monparking.html
@@ -81,7 +81,7 @@
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>MONPARKING C'EST QUOI?</h4>
         <br>
-				<p class="jutif">Mon équipe a conçu et soumis une application au concours <a href="http://hacksherbrooke.com/">HackSherbrooke 2015</a>. Notre application détermine la place de stationnement la plus près de votre destination dans la ville de Sherbrooke. En plus de vous diriger vers cet emplacement en voiture, l’application vous propose le meilleur trajet à suivre à pied pour vous rendre du stationnement à votre destination finale. L’application possède un autre atout. Vous ne connaissez pas la ville et vous ne savez pas quoi y faire ? Cliquez sur le bouton « Autour de moi » et l'application vous proposera une activité se déroulant à proximité.</p>
+				<p class="jutif">Mon équipe a conçu et soumis une application au concours <a href="https://hacksherbrooke.com/">HackSherbrooke 2015</a>. Notre application détermine la place de stationnement la plus près de votre destination dans la ville de Sherbrooke. En plus de vous diriger vers cet emplacement en voiture, l’application vous propose le meilleur trajet à suivre à pied pour vous rendre du stationnement à votre destination finale. L’application possède un autre atout. Vous ne connaissez pas la ville et vous ne savez pas quoi y faire ? Cliquez sur le bouton « Autour de moi » et l'application vous proposera une activité se déroulant à proximité.</p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mt">
 				<img class="img-responsive" src="image/code_monparking.jpg">
