--- a/public_html/about.html
+++ b/public_html/about.html
@@ -57,7 +57,7 @@
             <li class="active"><a href="about.html">À propos de moi</a></li>
             <li><a href="index.html#works">Mon portfolio</a></li>
             <li><a href="service.html">Mes services</a></li>
-            <li><a href="http://www.justinbrulotte.com/blog/">Blog</a></li>
+            <li><a href="https://www.justinbrulotte.com/blog/">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -77,7 +77,7 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h2>JUSTIN BRÛLOTTE</h2>
-				<p class="justif">Je suis un étudiant en génie informatique passionné des nouvelles technologies. Je suis un LifeHacker, c’est-à-dire que je recherche de raccourcis intelligents et efficaces afin de mieux accomplir différentes tâches. J'ai aussi un grand intérêt pour l'apprentissage accéléré et les techniques de mémorisation. Je <a href="http://www.justinbrulotte.com/blog/">blogue</a> aussi sur des tests que je fais dans ma vie, par exemple participer à une compétition de mémoire ou courir 5 kilomètres tous les matins. Je cherche à trouver les avantages dans le changement de nos habitudes.</p>
+				<p class="justif">Je suis un étudiant en génie informatique passionné des nouvelles technologies. Je suis un LifeHacker, c’est-à-dire que je recherche de raccourcis intelligents et efficaces afin de mieux accomplir différentes tâches. J'ai aussi un grand intérêt pour l'apprentissage accéléré et les techniques de mémorisation. Je <a href="https://www.justinbrulotte.com/blog/">blogue</a> aussi sur des tests que je fais dans ma vie, par exemple participer à une compétition de mémoire ou courir 5 kilomètres tous les matins. Je cherche à trouver les avantages dans le changement de nos habitudes.</p>
         </div>
 		</div><!-- /row -->
 	</div><!-- /container -->
