--- a/vamudes.html
+++ b/vamudes.html
@@ -80,7 +80,7 @@
     <div class="row centered mt mb">
       <div class="col-lg-8 col-lg-offset-2">
         <h4>MON IMPLICATION DANS VAMUDES</h4>
-        <h3><a href="http://vamudes.ca/accueil/">http://vamudes.ca</a></h3>
+        <h3><a href="https://vamudes.ca/accueil/">https://vamudes.ca</a></h3>
         <br>
         <p class="jutif">Développeur d'une librairie de communication entre le payload et l'autopilote en utilisant le protocole MavLink. Je suis aussi responsable des demandes chères les commanditaires et coordinateur des activités et la trésorerie du groupe.</p>
         </div>
