--- a/vitrerie.html
+++ b/vitrerie.html
@@ -80,10 +80,10 @@
     <div class="row centered mt mb">
       <div class="col-lg-8 col-lg-offset-2">
         <h4>QU'EST-CE QU'UN VITRERIE À BESOIN EN INFORMATIQUE ?</h4>
-        <h3><a href="http://www.vitreriedufour.ca">http://www.vitreriedufour.ca</a></h3>
+        <h3><a href="https://www.vitreriedufour.ca">https://www.vitreriedufour.ca</a></h3>
         <br>
         <p class="jutif">J’ai développé un logiciel d’estimation de local ou bâtiment vitré. J’ai travaillé avec une personne qui a plus de 40 ans d’expérience dans le domaine. Pour faire le logiciel le plus simple et le plus efficace, j’ai dû comprendre l’importance de chaque étable et ajouté ma touche personnelle d’optimisation. Le résultat est un produit simple qui prend quelques paramètres de départ et qui produit un rapport complet prêt à donner au client ou pour commander de pièces. Ce logiciel a été fait avec l’interface Excel, ce qui rend l’utilisation familière.</p>
-        <p class="jutif">J'ai aussi mis en ligne le site web de la vitrerie que vous pouvez consulter ici : <a href="http://www.vitreriedufour.ca">http://www.vitreriedufour.ca</a>. J'ai du faire plusieurs modifications pour que le site après bien sûr les appareils mobiles.</p>
+        <p class="jutif">J'ai aussi mis en ligne le site web de la vitrerie que vous pouvez consulter ici : <a href="https://www.vitreriedufour.ca">https://www.vitreriedufour.ca</a>. J'ai du faire plusieurs modifications pour que le site après bien sûr les appareils mobiles.</p>
         </div>
       <div class="col-lg-10 col-lg-offset-1 mt">
         <center><img class="img-responsive" src="image/image1_vitrerie.png"></centre>
