--- a/udesfirst.html
+++ b/udesfirst.html
@@ -81,7 +81,7 @@
       <div class="col-lg-8 col-lg-offset-2">
         <h4>MON IMPLICATION DANS UDES FIRST</h4>
         <br>
-        <p class="jutif">Mentorat dans des écoles primaires et secondaires pour les compétitions de robotique FIRST FLL et FRC (voir <a href="http://www.robotiquefirstquebec.org">http://www.robotiquefirstquebec.org</a>). Je suis aussi participant et coordonnateur de l'activité <a href="https://www.youtube.com/channel/UCFfnvW0xNa_bEDZy_-nCEkg">robot en 100h</a> qui consiste à faire le défi secondaire en 100h pour aider les équipes à démarrer. Je m'occupe de la communication avec les équipes FRC et de l'activité de réseautage durant le gala du mérite étudiant de la faculté de génie.</p>
+        <p class="jutif">Mentorat dans des écoles primaires et secondaires pour les compétitions de robotique FIRST FLL et FRC (voir <a href="https://www.robotiquefirstquebec.org">https://www.robotiquefirstquebec.org</a>). Je suis aussi participant et coordonnateur de l'activité <a href="https://www.youtube.com/channel/UCFfnvW0xNa_bEDZy_-nCEkg">robot en 100h</a> qui consiste à faire le défi secondaire en 100h pour aider les équipes à démarrer. Je m'occupe de la communication avec les équipes FRC et de l'activité de réseautage durant le gala du mérite étudiant de la faculté de génie.</p>
         </div>
       <div class="col-lg-10 col-lg-offset-1 mt">
         <center><img class="img-responsive" src="image/udes-first-1.jpg"></centre>
